--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-hooks-template",
+  "name": "reasonmtl-dojo-3",
   "reason": {
     "react-jsx": 3
   },
@@ -9,7 +9,7 @@
   },
   "package-specs": [
     {
-      "module": "commonjs",
+      "module": "es6",
       "in-source": true
     }
   ],
@@ -23,5 +23,11 @@
   "ppx-flags": [
     "graphql_ppx/ppx"
   ],
-  "refmt": 3
+  "refmt": 3,
+  "warnings": {
+    "error": "+5"
+  },
+  "bsc-flags": [
+    "-bs-super-errors"
+  ]
 }
